[Liverpool] Fix logo colour on mobile version

--- a/web/cobrands/liverpool/base.scss
+++ b/web/cobrands/liverpool/base.scss
@@ -19,6 +19,7 @@ $heading-font: 'Open Sans', sans-serif, Helvetica, Arial, sans-serif;
     background: none !important;
     text-indent: 0;
     font-size: 1.5em;
+    color: #522E91;
 }
 
 .liverpool-header, .liverpool-footer {
